--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,13 @@
 /* Mobile and tablet */
-@media (max-width: 63.96875em) {}
+@media (max-width: 63.96875em) {
+    .app {
+        display: none;
+    }
+
+    .not-supported-small {
+        display: flex;
+    }
+}
 
 /* Mobile, tablet and S PC */
 @media (max-width: 77.46875em) {
@@ -13,43 +21,8 @@
         font-size: 2.4rem;
         line-height: 2rem;
     }
-}
 
-/* Mobile */
-@media (max-width: 47.96875em) {}
-
-/* L Mobile: width > 375px and width <= 425px (min-width: 376px) and (max-width: 426px) */
-@media (min-width: 23.5em) and (max-width: 26.625em) {}
-
-/* M Mobile: width > 320px and width <= 375px (min-width: 321px) and (max-width: 376px) */
-@media (min-width: 20.0625em) and (max-width: 23.5em) {}
-
-/* S Mobile: width <= 320px (max-width: 321px) */
-@media (max-width: 20.0625em) {}
-
-/* Tablet */
-@media (min-width: 48em) and (max-width: 63.96875em) {}
-
-/* S PC */
-@media (min-width: 64em) and (max-width: 77.46875em) {
-    .btn {
-        padding: 1rem 3rem;
-        font-size: 1.6rem;
-    }
-
-    .header__logo {
-        height: 2.4rem;
-    }
-
-    .header__nav-list {
-        font-size: 1.6rem;
-        padding: 1.2rem 1.8rem;
-    }
-
-    .header__nav-link {
-        padding: 0.9rem 1.4rem;
-    }
-
+    /* Hero Section */
     .section-hero {
         padding-top: 0;
     }
@@ -68,6 +41,10 @@
         line-height: 2.4rem;
     }
 
+    .hero-marquee {
+        max-width: 52.6rem;
+    }
+
     .hero-img {
         width: 100%;
         margin-left: 1.2rem;
@@ -76,18 +53,6 @@
     .featured-logos {
         justify-content: space-evenly;
         height: 10rem;
-    }
-
-    .featured-logos img {
-        height: 2.4rem;
-    }
-
-    .section-how {
-        max-width: 840px;
-    }
-
-    .meal-card-overview {
-        max-width: 740px;
     }
 
     .meal-card-overview .col {
@@ -109,6 +74,40 @@
 
     .s-device-order-1 {
         order: 1;
+    }
+}
+
+/* S PC */
+@media (min-width: 64em) and (max-width: 77.46875em) {
+
+    .header__order-btn {
+        padding: 1rem 3rem;
+        font-size: 1.6rem;
+    }
+
+    .header__logo {
+        height: 2.4rem;
+    }
+
+    .header__nav-list {
+        font-size: 1.6rem;
+        padding: 1.2rem 1.8rem;
+    }
+
+    .header__nav-link {
+        padding: 0.9rem 1.4rem;
+    }
+
+    .featured-logos img {
+        height: 2.4rem;
+    }
+
+    .section-how {
+        max-width: 840px;
+    }
+
+    .meal-card-overview {
+        max-width: 740px;
     }
 
     .section-pricing {
@@ -146,7 +145,7 @@
         display: none;
     }
 
-    .not-supported {
+    .not-supported-big {
         display: flex;
     }
 }
